[gd_scene load_steps=3 format=3 uid="uid://bttnt1jcweusq"]

[ext_resource type="Script" path="res://plane_hud/plane_display.gd" id="1_nnveu"]
[ext_resource type="PackedScene" uid="uid://xh0ixcogfbgy" path="res://plane_hud/radar.tscn" id="2_jo1y4"]

[node name="PlaneDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nnveu")

[node name="Readouts" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ForwardSpeed" type="Label" parent="Readouts"]
layout_mode = 2
text = "Forward Speed:"

[node name="Altitude" type="Label" parent="Readouts"]
layout_mode = 2
text = "Altitude: "

[node name="Radar" parent="Readouts" instance=ExtResource("2_jo1y4")]
layout_mode = 2
radius = 50.0

[node name="KillBanners" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
alignment = 2
